--- a/index.html
+++ b/index.html
@@ -19,7 +19,37 @@
     <title>Vanilla_Weather_app</title>
   </head>
   <body>
-    <h1></h1>
+    <div class="container">
+      <div class="weather-app">
+        <h1>New York</h1>
+        <ul>
+          <li>Friday 05:00</li>
+          <li>Cloudy</li>
+        </ul>
+        <div class="row">
+          <div class="col-6">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+              alt="Cloudy"
+            />
+            12°C | °F
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>Precipitation:0%</li>
+              <li>Humidity: 73%S</li>
+              <li>Humidity: 2 km/h</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <small>
+        <a href="https://github.com/JoyceF-9/vanilla-weatherapp" target="_blank"
+          >Open-source code</a
+        >
+        by Joyce Feng
+      </small>
+    </div>
 
     <script src="src/app.js"></script>
   </body>
