--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/style.css" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,6 +16,7 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="src/style.css" />
     <title>Vanilla_Weather_app</title>
   </head>
   <body>
@@ -42,13 +43,15 @@
             </ul>
           </div>
         </div>
+        <small>
+          <a
+            href="https://github.com/JoyceF-9/vanilla-weatherapp"
+            target="_blank"
+            >Open-source code</a
+          >
+          by Joyce Feng
+        </small>
       </div>
-      <small>
-        <a href="https://github.com/JoyceF-9/vanilla-weatherapp" target="_blank"
-          >Open-source code</a
-        >
-        by Joyce Feng
-      </small>
     </div>
 
     <script src="src/app.js"></script>
