--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
       crossorigin="anonymous"
     />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="src/index.js" defer></script>
+
     <link rel="stylesheet" href="src/style.css" />
-    <title>Vanilla_Weather_app</title>
+    <title>Weather App</title>
   </head>
   <body>
     <div class="container">
       <div class="weather-app-wrapper">
         <div class="weather-app">
-          <from id=" search-form" class="mb-3">
+          <form id="search-form" class="mb-3">
             <div class="row">
               <div class="col-9">
                 <input
                   type="search"
-                  placeholder="Type a city..."
+                  placeholder="Type a city.."
                   class="form-control"
                   id="city-input"
                   autocomplete="off"
@@ -38,11 +38,11 @@
                 />
               </div>
             </div>
-          </from>
+          </form>
           <div class="overview">
             <h1 id="city"></h1>
             <ul>
-              <li>Last updated:<span id="date"></span></li>
+              <li>Last updated: <span id="date"></span></li>
               <li id="description"></li>
             </ul>
           </div>
@@ -52,29 +52,29 @@
                 <img src="" alt="Clear" id="icon" />
                 <div>
                   <strong id="temperature"></strong
-                  ><span class="units">°C|<a href="#">°F</a></span>
+                  ><span class="units"> °C</span>
                 </div>
               </div>
             </div>
             <div class="col-6">
               <ul>
                 <li>Humidity: <span id="humidity"></span>%</li>
-                <li>Humidity:<span id="windy"></span>km/h</li>
+                <li>Wind: <span id="wind"></span> m/h</li>
               </ul>
             </div>
           </div>
+          <div class="weather-forecast" id="forecast"></div>
         </div>
         <small>
           <a
-            href="https://github.com/JoyceF-9/vanilla-weatherapp"
+            href="https://github.com/wecodeschool/vanilla-weather-app"
             target="_blank"
             >Open-source code</a
           >
-          by Joyce Feng
+          by Joyce
         </small>
       </div>
     </div>
-
     <script src="src/app.js"></script>
   </body>
 </html>
